# pylrclibup

./: .gitignore  README.md  all_code.txt  pyproject.toml  structure.txt
pylrclibup/: __init__.py  config.py  exceptions.py  i18n.py  logging_utils.py  pylrclibup_all_py_files.txt  pylrclibup_structure.txt
pylrclibup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pylrclibup/api/: __init__.py  client.py  http.py  pow.py  publish.py
pylrclibup/cli/: main.py
pylrclibup/fs/: __init__.py  cleaner.py  mover.py  paths.py
pylrclibup/locales/: pylrclibup.pot
pylrclibup/locales/en_US/LC_MESSAGES/: pylrclibup.mo  pylrclibup.po
pylrclibup/locales/zh_CN/LC_MESSAGES/: pylrclibup.mo  pylrclibup.po
pylrclibup/lrc/: __init__.py  matcher.py  parser.py
pylrclibup/model/: __init__.py  lyrics.py  track.py
pylrclibup/processor/: __init__.py  core.py
scripts/: compile_translations.sh  extract_messages.sh  init_locale.sh  update_translations.sh
