[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylrclibup"
version = "0.1.0"
description = "A robust Python CLI tool for uploading lyrics or instrumental tags to LRCLIB."
readme = "README.md"
authors = [
    { name="Harmonese", email="soundwaveradiator@outlook.com" },
]
license = { file="LICENSE" }
requires-python = ">=3.10"
keywords = ["lrclib", "lyrics", "lrc", "music", "metadata"]

dependencies = [
    "requests>=2.31.0",
    "mutagen>=1.47",
]

# 使 pip install 后自动获得命令行工具 pylrclibup
[project.scripts]
pylrclibup = "pylrclibup.cli.main:run_cli"

[project.urls]
Homepage = "https://github.com/harmonese/pylrclibup"
Source = "https://github.com/harmonese/pylrclibup"
Issues = "https://github.com/harmonese/pylrclibup/issues"
